# kaggle_isic

./: .gitignore  README.md  dataset_create.sh  dataset_init.sh  dataset_update.sh  pyproject.toml
colab/: timm.ipynb
notebooks/: dump_fyk.ipynb  ensemble.ipynb  hatry_dump.ipynb  isic_ensemble_v2.ipynb  kanna_dump.ipynb
run/: cat.py  ensemble.py  lgb.py  tabnet.py
run/conf/: cat.yaml  cross_validation.yaml  ensemble.yaml  lgb.yaml  tabnet.yaml
src/: comp_score.py  cross_validation.py  dataset-metadata.json  feature_engineer.py  image_dataset.py  image_model.py  train_cat.py  train_lgb.py
